--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -210,7 +210,7 @@
   margin-right: 8px;
   align-self: center;
   margin-top: 0;
-  transform: translateY(3px);
+  transform: translateY(6px);
 }
 
 .custom-input-item ion-label {
