--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -60,7 +60,7 @@
 .custom-input-item ion-icon {
   align-self: center;
   margin-top: 0;
-  transform: translateY(3px);
+  transform: translateY(6px);
 }
 
 .cosmos-form-list {
